<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
   >

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/dimen_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:padding="@dimen/dimen_item_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_circle">

            <LinearLayout
                android:id="@+id/item_main"
                android:padding="@dimen/dimen_item_padding"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/mark_for_image_set"
                    android:padding="@dimen/dimen_item_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/cakeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cake_in_list"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/textViewCakeId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/cakeName"
                        android:text="@string/cake"
                        android:textColor="@color/black"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:padding="@dimen/dimen_item_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/difficulty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/difficulty_in_list"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/textViewDifficulty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/difficulty"
                        android:text="@string/difficulty"
                        android:textColor="@color/black"
                        />

                </RelativeLayout>


                <RelativeLayout
                    android:padding="@dimen/dimen_item_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ingredients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients_in_list"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/textViewIngredients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ingredients"
                        android:text="@string/ingredients"
                        android:textColor="@color/black"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_below="@id/textViewIngredients"
                    android:padding="@dimen/dimen_item_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/recipe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_in_list"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/textViewRecipe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/recipe"
                        android:text="@string/recipe"
                        android:textColor="@color/black"
                        />

                </RelativeLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="@dimen/dimen_image_list_square"
                android:layout_height="@dimen/dimen_image_list_square"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/dimen_image_padding" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>