<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_linear"
    >

    <TextView
        android:id="@+id/welcome_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_page_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dimen_first_page_text_pos"
        android:textSize="@dimen/dimen_first_page_text_size"
        />

    <ImageView
        android:id="@+id/image_first_page_middle"
        android:layout_width="@dimen/dimen_first_image_size"
        android:layout_height="@dimen/dimen_first_image_size"
        android:layout_below="@id/welcome_first"
        android:src="@drawable/cake_first"
        android:contentDescription="@string/content_description"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        />

    <Button
        android:id="@+id/btn_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lets_bake"
        android:layout_below="@+id/image_first_page_middle"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/dimen_first_btn_pos"
        android:background="@color/pink_bg"
        />

    <Button
        android:id="@+id/btn_first_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:layout_below="@+id/btn_first"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:background="@color/pink_bg"
        android:layout_marginTop="@dimen/dimen_first_btn_exit"
        />

</RelativeLayout>